# zattera

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.md  README.md
configs/: README.md  ahnode.config.ini  broadcast.config.ini  example.config.ini  fastgen.config.ini  fullnode.config.ini  test.config.ini  testnet.config.ini  witness.config.ini
deploy/: README.md  zatterad-entrypoint.sh  zatterad-paas-bootstrap.sh  zatterad-test-bootstrap.sh
deploy/nginx/: README.md  zatterad-proxy.conf.template
deploy/runit/: README.md  zatterad-paas-monitor.run  zatterad-snapshot-uploader.run  zatterad.run
docs/development/: plugin.md  testing.md
docs/getting-started/: building.md  cli-wallet-guide.md  exchange-quick-start.md  quick-start.md
docs/operations/: docker-deployment-guide.md  genesis-launch.md  node-modes-guide.md  reverse-proxy-guide.md
programs/: CMakeLists.txt
programs/build_helpers/: configure_build.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/cli_wallet/tests/: README.md  test_commands.sh  test_transactions.sh
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/utils/: CMakeLists.txt  get_dev_key.cpp  inflation_plot.py  newplugin.py  schema_test.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_shared_mem.cpp
programs/zatterad/: CMakeLists.txt  main.cpp
scripts/ci/: README.md  build-release.sh  run-tests.sh
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/fc/tests/: CMakeLists.txt  bloom_test.cpp  main.cpp  real128_test.cpp  saturation_test.cpp  utf8_test.cpp
src/base/fc/tests/compress/: compress_test.cpp
src/base/fc/tests/crypto/: aes_test.cpp  base_n_test.cpp  bigint_test.cpp  blowfish_test.cpp  dh_test.cpp  ecc_blind_test.cpp  hmac_test.cpp  keccak_test.cpp  rand_test.cpp  sha_test.cpp
src/base/fc/tests/network/: ntp_test.cpp
src/base/fc/tests/network/http/: websocket_test.cpp
src/base/fc/tests/thread/: task_cancel_test.cpp  thread_test.cpp
src/base/fc/tests/tools/: CMakeLists.txt  README.md  ecc_interop_test.sh
src/base/schema/: CMakeLists.txt  schema.cpp
src/base/schema/include/zattera/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
src/base/schema/include/zattera/schema/schema_types/: fixed_string.hpp  flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
src/base/utils/: CMakeLists.txt  benchmark_dumper.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  tempdir.cpp  words.cpp
src/base/utils/include/zattera/utils/: benchmark_dumper.hpp  git_revision.hpp  key_conversion.hpp  logging_config.hpp  padding_ostream.hpp  plugin_utilities.hpp  string_escape.hpp  tempdir.hpp  words.hpp
src/core/: CMakeLists.txt
src/core/chain/: CMakeLists.txt  block_log.cpp  database.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  shared_authority.cpp  transaction_object.cpp  witness_schedule.cpp  zattera_evaluator.cpp  zattera_objects.cpp
src/core/chain/include/zattera/chain/: account_object.hpp  block_log.hpp  block_notification.hpp  block_summary_object.hpp  buffer_type.hpp  chain_property_object.hpp  comment_object.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  node_property_object.hpp  operation_notification.hpp  shared_authority.hpp  shared_db_merkle.hpp  transaction_notification.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp  zattera_evaluator.hpp  zattera_object_types.hpp  zattera_objects.hpp
src/core/chain/include/zattera/chain/utils/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  reward.hpp  signal.hpp  uint256.hpp
src/core/chain/utils/: advanced_benchmark_dumper.cpp  impacted.cpp  reward.cpp
src/plugins/chain/: CMakeLists.txt  chain_plugin.cpp
src/plugins/chain/include/zattera/plugins/chain/: chain_plugin.hpp
src/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  remote_node_api.cpp  wallet.cpp
src/wallet/include/zattera/wallet/: api_documentation.hpp  remote_node_api.hpp  wallet.hpp
tests/: .dockerignore  CMakeLists.txt  README.md
tests/chain/: README.md  main.cpp
tests/chain/basic/: README.md  basic_test.cpp
tests/chain/block/: README.md  block_test.cpp
tests/chain/bmic/: README.md  bmic_test.cpp
tests/chain/database/: README.md  undo_test.cpp
tests/chain/live/: README.md  live_test.cpp
tests/chain/operations/: README.md  account_test.cpp  comment_test.cpp  custom_test.cpp  market_test.cpp  reward_test.cpp  transfer_test.cpp  vesting_test.cpp  witness_test.cpp
tests/chain/serialization/: README.md  serialization_test.cpp
tests/fixtures/: CMakeLists.txt  database_fixture.cpp  database_fixture.hpp
tests/helpers/: CMakeLists.txt
tests/helpers/bmic/: CMakeLists.txt  bmic.hpp
tests/helpers/undo/: undo.hpp
tests/integration/: README.md
tests/integration/api/: jsonsocket.py  list_account.py  list_comment.py  test_ah_get_account_history.py  test_ah_get_ops_in_block.py  test_list_votes.py  test_list_votes2.py
tests/integration/smoke/: Dockerfile  README.md  docker_build_and_run.sh  smoketest.sh
tests/integration/smoke/account_history/: config.ini  test_group.sh
tests/integration/smoke/ah_limit_account/: config.ini  test_group.sh
tests/integration/smoke/ah_limit_operations/: config.ini
tests/integration/smoke/scripts/: open_node.sh  run_replay.sh
tests/integration/smoke/votes/: config.ini  test_group.sh
tests/plugin/: README.md  main.cpp
tests/plugin/json_rpc/: json_rpc_test.cpp
tests/plugin/market_history/: market_history_test.cpp
tests/scripts/: create_account_list.py  test_ah_get_ops_in_block.sh
tools/python_debug_node/: README.ko.md  README.md  setup.py
(+243 files in other folders)
